k8s/backend-deployment.yaml

apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: smartpay

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      restartPolicy: Always

      containers:
        - name: backend

          image: 130128695612.dkr.ecr.ap-south-1.amazonaws.com/smartpay-backend:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 5000
