k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: smartpay

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend

          image: 130128695612.dkr.ecr.ap-south-1.amazonaws.com/smartpay-frontend:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 80
