k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: smartpay

spec:
  type: LoadBalancer

  selector:
    app: frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
